--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .App {
   display: flex;
   justify-content: center;
@@ -19,4 +12,18 @@
   width: 100%;
   height: 100%;
   border: 1px solid #ccc;
+}
+
+.chat-box {
+  flex: 1;
+  max-height: none;
+  overflow: hidden;
+}
+
+.chat-input {
+  background-color: #f0f0f0;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  word-wrap: break-word;
 }
