--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,13 +5,22 @@
   height: 100vh;
 }
 
-.chat-container {
+.parent-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust the height if needed */
+  
+}
+
+.chat-container {
+  
+  left:30px;
   max-width: 400px;
-  width: 100%;
-  height: 100%;
+  width: 400px;
+  height: 400px;
   border: 1px solid #ccc;
+  /* Add any other styles you want for the .chat-container */
 }
 
 .chat-box {
