--- a/client/src/Comps/ChatBox/ChatBox.css
+++ b/client/src/Comps/ChatBox/ChatBox.css
@@ -2,10 +2,31 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 30px;
-  max-width: 80%;
+  padding: 20px;
+  max-width: 800px;
   max-height: 400px;
+  height: 400px;
+  width:220%;
   overflow-y: auto;
+  scrollbar-width: thin; /* This is for Firefox */
+
+  /* Webkit-based browsers (Chrome, Safari) */
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888; /* Color of the scrollbar thumb */
+    border-radius: 6px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #eee; /* Color of the scrollbar track */
+    border-radius: 6px;
+  }
+
+  /* Firefox */
+  scrollbar-color: #888 #eee;
 }
   
   .message-bubble {
@@ -21,11 +42,9 @@
     align-self: flex-end;
     background-color: red;
     color: #fff;
-    margin-left: 50px; /* Increase the left margin for user messages */
   }
   
   .message-bubble.other {
     align-self: flex-start;
-    margin-right: 50px; /* Increase the right margin for other messages */
   }
   
