--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@ body {
   padding: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
   overflow-y: hidden;
