made enter wider

--- a/client/src/Comps/ChatInput/ChatInput.css
+++ b/client/src/Comps/ChatInput/ChatInput.css
@@ -5,8 +5,8 @@
   padding: 10px;
   position: fixed;
   bottom: 0;
-  width: 60%;
-  max-width: 60%;
+  width: 97vw;
+  max-width: 97vw;
   border-radius: 20px;
   padding-left: 30px;
 }
