--- a/client/src/Comps/ChatInput/ChatInput.css
+++ b/client/src/Comps/ChatInput/ChatInput.css
@@ -9,6 +9,7 @@
   max-width: 97vw;
   border-radius: 20px;
   padding-left: 30px;
+  height:7vh;
 }
 
 .chat-input textarea {
@@ -17,7 +18,7 @@
   border: none;
   border-radius: 20px;
   margin-right: 10px;
-  height: 100%;
+  height: 70%;
   white-space: pre-wrap;
   overflow-wrap: break-word;
   resize: none;
